2016-11-04  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/plots/colors.py: Fixed docstring.

2016-11-04  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/plots/colors.py:

	Set default value for Adobe Color Table export to 256 colors.

	* typhon/plots/tests/reference/viridis.act:

	Updated reference file to 256 colors.

	* typhon/plots/tests/test_colors.py:

	Added tests for Adobe Color Table and ASCII import of colormaps.

2016-11-04  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/plots/colors.py:

	Added a function to import colormaps from txt files.

	cmap_from_txt() and cmap_from_act() also register the reversed colormap.

2016-11-03  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/plots/cm/_cm.py:

	Adjust the very bright yellow in qualitative2 to be more saturated.

	* doc/pyplots/plot_qualitative1.py: Do not show interpolated colors.

2016-11-03  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/plots/colors.py:

	It is now possible to pass a number of colors for all colormap export
	functions.

	Use discrete levels in CPT files.

	Include number of colors in Adobe Color Tables.

	* typhon/plots/tests/reference/viridis.act,
	typhon/plots/tests/reference/viridis.cpt:

	Updated reference files.

2016-11-02  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/plots/colors.py:

	Added functions to export colormaps as GIMP gradient and CSS3 gradient.

2016-11-02  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/plots/colors.py:

	Do not include timestamps in cpt and txt files.

	Use blanks instead of "/" in cpt files.

	* typhon/plots/tests/reference/viridis.cpt,
	* typhon/plots/tests/reference/viridis.txt:

	Updated reference files to new formats.

	* typhon/plots/tests/test_colors.py:

	Use a simple file comparison for export tests.

2016-11-02  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/plots/colors.py:

	Added a function to export colormaps as Adobe Color Table.

	* typhon/plots/tests/test_colors.py: Test export to Adobe Color Table.
