@@ -6,11 +6,6 @@ typhon.plots
     :undoc-members:
     :show-inheritance:
 
-.. automodule:: typhon.plots.colors
-    :members:
-    :undoc-members:
-    :show-inheritance:
-
 Typhon style sheet
 ^^^^^^^^^^^^^^^^^^
 .. plot:: pyplots/stylesheet_gallery.py
